--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </article>
 </section>
 
-    <script src="scripts(MVC)\chrono.js"></script>
-    <script src="scripts(MVC)\img.js"></script>
-    <script src="scripts(MVC)\usuario.js"></script>
-    <script src="scripts(MVC)\model.js"></script>
-    <script src="scripts(MVC)\view.js"></script>
-    <script src="scripts(MVC)\controller.js"></script>
+    <script src="scripts\chrono.js"></script>
+    <script src="scripts\image.js"></script>
+    <script src="scripts\user.js"></script>
+    <script src="scripts\model.js"></script>
+    <script src="scripts\view.js"></script>
+    <script src="scripts\controller.js"></script>
 </body>
 </html>
