--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="limitTime">Limit time 60s</p>
     </article>
 <article>
-    <div id="msg"><h1>C'mon find the tresure MVC</h1></div>
+    <div id="msg"><h1>C'mon find the Tresure</h1></div>
     <img src="https://picsum.photos/1000/800?random=2" id="TresImg">   
     <div id="hint"><h1>Hint</h1></div>
     </article>
